cmake_minimum_required(VERSION 3.2)
project(basic)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
add_subdirectory(cpp-data-types)
add_subdirectory(cpp-variable-types)
add_subdirectory(cpp-references)
add_subdirectory(cpp-storage-classes)
add_subdirectory(cpp-numbers)
add_subdirectory(cpp-array)
add_subdirectory(cpp-string)
add_subdirectory(cpp-pointer)
add_subdirectory(cpp-time)
add_subdirectory(constants)
add_subdirectory(control)
