add_executable(cpp-class main.cpp point.h box.h)
add_executable(cpp-circle circle.cpp)
add_executable(cpp-student student.cpp)
add_executable(cpp-access access.cpp)
add_executable(cpp-private private.cpp)
add_executable(cpp-construction construction.cpp)
add_executable(cpp-init init.cpp)
add_executable(cpp-static static.cpp)
add_executable(cpp-this this.cpp)
add_executable(cpp-const const.cpp)
add_executable(cpp-friend friend.cpp)
add_executable(cpp-overloading overloading.cpp)
