
add_executable(exercise1.2 exercise1.2.cpp)
add_executable(exercise1.3 exercise1.3.cpp)
add_executable(exercise1.4 exercise1.4.cpp)
add_executable(exercise1.9 exercise1.9.cpp)
add_executable(exercise1.10 exercise1.10.cpp)
add_executable(exercise1.11 exercise1.11.cpp)
add_executable(exercise1.12 exercise1.12.cpp)
add_executable(exercise1.16 exercise1.16.cpp)