
include_directories(${PROJECT_SOURCE_DIR}/primer/include)

add_executable(exercise1.2 exercise1.2.cpp)
add_executable(exercise1.3 exercise1.3.cpp)
add_executable(exercise1.4 exercise1.4.cpp)
add_executable(exercise1.9 exercise1.9.cpp)
add_executable(exercise1.10 exercise1.10.cpp)
add_executable(exercise1.11 exercise1.11.cpp)
add_executable(exercise1.12 exercise1.12.cpp)
add_executable(exercise1.16 exercise1.16.cpp)
add_executable(exercise1.17 exercise1.17.cpp)
add_executable(exercise1.21 exercise1.21.cpp)
add_executable(exercise1.22 exercise1.22.cpp)
add_executable(exercise1.23 exercise1.23.cpp)