add_executable(exercise2.4 exercise2.4.cpp)
add_executable(exercise2.8 exercise2.8.cpp)
add_executable(exercise2.17 exercise2.17.cpp)
add_executable(exercise2.18 exercise2.18.cpp)
add_executable(exercise2.34 exercise2.34.cpp)
add_executable(demo2.3.2 demo2.3.2.cpp)
add_executable(demo2.4 demo2.4.cpp)
add_executable(demo2.5.3 demo2.5.3.cpp)
add_executable(exercise2.36 exercise2.36.cpp)