include_directories(${PROJECT_SOURCE_DIR}/primer/include)
add_executable(exercise_3_1_a exercise_3_1_a.cpp)
add_executable(exercise_3_1_b exercise_3_1_b.cpp)
add_executable(exercise3_2_a exercise3_2_a.cpp)
add_executable(exercise3_2_b exercise3_2_b.cpp)
add_executable(demo3.2 demo3.2.cpp)
add_executable(exercise3_4_a exercise3_4_a.cpp)
add_executable(exercise3_4_b exercise3_4_b.cpp)
add_executable(exercise3_5 exercise3_5.cpp)
add_executable(demo3.2.3 demo3.2.3.cpp)
add_executable(exercise3_6 exercise3_6.cpp)
add_executable(demo3.3 demo3.3.cpp)
add_executable(exercise3_16 exercise3_16.cpp)
add_executable(exercise3_17 exercise3_17.cpp)
add_executable(exercise3_20 exercise3_20.cpp)