include_directories(${PROJECT_SOURCE_DIR}/primer/include)
add_executable(exercise_3_1_a exercise_3_1_a.cpp)
add_executable(exercise_3_1_b exercise_3_1_b.cpp)
add_executable(exercise3_2_a exercise3_2_a.cpp)
add_executable(exercise3_2_b exercise3_2_b.cpp)
add_executable(demo3.2 demo3.2.cpp)
add_executable(exercise3_4_a exercise3_4_a.cpp)
add_executable(exercise3_4_b exercise3_4_b.cpp)
add_executable(exercise3_5 exercise3_5.cpp)
add_executable(demo3.2.3 demo3.2.3.cpp)
add_executable(exercise3_6 exercise3_6.cpp)
add_executable(demo3.3 demo3.3.cpp)
add_executable(exercise3_16 exercise3_16.cpp)
add_executable(exercise3_17 exercise3_17.cpp)
add_executable(exercise3_20 exercise3_20.cpp)
add_executable(demo3.4 demo3.4.cpp)
add_executable(exercise3.21 exercise3.21.cpp)
add_executable(exercise3.22 exercise3.22.cpp)
add_executable(exercise3.23 exercise3.23.cpp)
add_executable(exercise3.31 exercise3.31.cpp)
add_executable(exercise3.32 exercise3.32.cpp)
add_executable(demo3.5 demo3.5.cpp)
add_executable(exercise3.35 exercise3.35.cpp)
add_executable(exercise3.36 exercise3.36.cpp)
add_executable(exercise3.39 exercise3.39.cpp)
add_executable(exercise3.40 exercise3.40.cpp)
add_executable(exercise3.41 exercise3.41.cpp)
add_executable(exercise3.42 exercise3.42.cpp)
add_executable(exercise3.43 exercise3.43.cpp)
add_executable(exercise3.44 exercise3.44.cpp)
add_executable(exercise3.45 exercise3.45.cpp)

