add_executable(exercise6.3 exercise6.3.cpp)
add_executable(exercise6.4 exercise6.4.cpp)
add_executable(exercise6.5 exercise6.5.cpp)
add_executable(exercise6.7 exercise6.7.cpp)
add_executable(exercise6.8 exercise6.8.cpp)
add_executable(exercise6.10 exercise6.10.cpp)
add_executable(exercise6.11 exercise6.11.cpp)
add_executable(exercise6.12 exercise6.12.cpp)
add_executable(exercise6.17 exercise6.17.cpp)
add_executable(exercise6.21 exercise6.21.cpp)
add_executable(exercise6.22 exercise6.22.cpp)
add_executable(exercise6.23 exercise6.23.cpp)
add_executable(exercise6.25 exercise6.25.cpp)
add_executable(exercise6.27 exercise6.27.cpp)
add_executable(exercise6.30 exercise6.30.cpp)
add_executable(exercise6.33 exercise6.33.cpp)
add_executable(exercise6.36 exercise6.36.cpp)
